@@ -45,6 +45,7 @@ Committed:
     * Igor Tatarinov's [PATCH] usage patch (-V)
     * Dean's [PATCH] child_timeout not correctly defined
     * Mark Bixby's [PORT] MPE porting patch
+    * Dean's [PATCH] Re: problem with a .gif and v2.1.4
 
 Available:
 
@@ -79,10 +80,6 @@ Available:
     * Martin's [PATCH] 36kB: Make apache compile & run on an EBCDIC mainframe
 	<19971217184646.62136@deejai.mch.sni.de>
 	Status: Martin +1, Dean +1
-
-    * Dean's [PATCH] Re: problem with a .gif and v2.1.4
-	<Pine.LNX.3.95dg3.971216111807.22094B-100000@twinlark.arctic.org>
-	Status: Dean +1, Jim +1, Brian +1
 
     * Martin's [PATCH] Gimme a break!
 	<19971217170852.51979@deejai.mch.sni.de>
